# maturin-stub-package-error

./: Cargo.toml  README.md  pyproject.toml
maturin_stub_package_error/: my_module.pyi
src/: lib.rs
